[package]
name = "cc_api_quote"
version = "0.1.0"
edition = "2021"

[dependencies]
revm = { version = "19.5.0", features = ["serde", "std", "hashbrown"] }
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
oxhttp = { version = "0.3.0", features = ["native-tls"] }
serde_json = "1.0.138"
